--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>Portfolio</h1>
       <div class="portfolio-title-container">
         <span class="portfolio-vertical-line"></span>
-        <a href="https://github.com/ydroal/Baristana" class="portfolio-link">
+        <a target="_blank" href="https://github.com/ydroal/Baristana" class="portfolio-link">
           <p class="portfolio-sub-title">Baristana</p>
         </a>
     </div>
@@ -70,7 +70,7 @@
               <li>Backend: Node.js with Express</li>
               <li>Database: MySQL</li>
           </ul>
-          <a href="https://github.com/ydroal/Baristana" class="portfolio-link">
+          <a target="_blank" href="https://github.com/ydroal/Baristana" class="portfolio-link">
             <p class="portfolio_contents-subtitle">Repo</p>
           </a>
       </article>
